safe-discriminant/tests/fail/remove_repr_disc1.stderr
error: Discriminant requires a `#[repr(x)] where x is one of u8, i8, u16, i16, u32, i32, u64, i64, u128, i128.
 --> tests/fail/remove_repr_disc1.rs:7:10
  |
7 | pub enum Foo {
  |          ^^^
